<!--
  ~ Copyright (c) 2017. Noah Gao <noahgaocn@gmail.com>
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">FreeIOT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_login">登录/注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录 or 注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">Email地址无效！</string>
    <string name="error_invalid_password">密码过短！</string>
    <string name="error_incorrect_password">密码无效！</string>
    <string name="error_field_required">此项必填！</string>
    <string name="permission_rationale">Email自动验证组件需要通讯录权限！</string>
    <string name="n_a">N/A</string>
    <string name="a_b_c">a@b.c</string>
    <string name="title_activity_settings">设置</string>
    <string name="tools">工具</string>
    <string name="products">产品广场</string>
    <string name="settings">设置</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="re_new_password">确认密码</string>
    <string name="notification_settings">通知设置</string>
    <string name="account_settings">账号与安全</string>
    <string name="modify_password">修改密码</string>
    <string name="home">首页</string>
    <string name="title_activity_product">产品详情</string>
    <string name="developer">开发者</string>
    <string name="basic_info">基本信息</string>
    <string name="commit">简介</string>
    <string name="readme">查看README</string>
    <string name="mod_list">模块列表</string>
    <string name="input_device_id">请输入设备ID</string>
    <string name="device_lost">该设备不知道跑到哪去了～</string>
    <string name="current_status">当前状态为：</string>
    <string name="title_activity_device">设备详情</string>
    <string name="empty_data">清空数据</string>
    <string name="disconnect">断开连接</string>
    <string name="rename">重新命名</string>
    <string name="delete_device">删除设备</string>
    <string name="device_reinit">重新激活入网</string>
    <string name="input_new_value">请输入新值</string>
    <string name="device_no_history">该设备最近没有历史记录！</string>
    <string name="fetch_data">抓取数据</string>
    <string name="inhours">小时内的数据</string>
    <string name="fetch">抓取</string>
    <string name="next_step">下一步</string>
    <string name="no_find_device">未找到任何兼容的设备～</string>
    <string name="choose_device">请选择要入网的设备</string>
    <string name="current_choose_product">当前选中产品：</string>
    <string name="current_choose_device">当前选中设备：</string>
    <string name="current_wifi">当前选定网络：</string>
    <string name="input_device_name">请填入设备名称</string>
    <string name="submit">提交</string>
    <string name="creating_device">正在创建设备&#8230;&#8230;&#8230;</string>
    <string name="initing_device">正在初始化设备&#8230;&#8230;&#8230;</string>
    <string name="input_wifi_password">请填入WiFi密码：</string>
    <string name="connect_device">连接设备</string>
    <string name="edit">更改</string>
    <string name="all_finish">所有操作均已完成！</string>
    <string name="tip_init">将设备断开电源后重新接通即可使设备正式接入FreeIOT网络，尽情享受物联时代吧！</string>
    <string name="loading">Loading…</string>
</resources>
