<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. Noah Gao <noahgaocn@gmail.com>
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.noahgao.freeiot.ui.ProductActivity"
    tools:showIn="@layout/activity_product">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="10dp"
            card_view:cardBackgroundColor="@android:color/background_light"
            card_view:cardCornerRadius="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textSize="18sp"
                    android:text="@string/basic_info" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"  />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:shrinkColumns="1">

                    <TableRow>
                        <TextView
                            android:layout_width="100dp"
                            android:text="@string/developer"
                            android:padding="3dip"
                            android:textSize="18sp"
                            android:shadowColor="#000000"
                            android:shadowDx="0.5"
                            android:shadowDy="0.0"
                            android:shadowRadius="0.2"/>
                        <TextView
                            android:id="@+id/basic_info_developer"
                            android:text="@string/n_a"
                            android:padding="3dip"
                            android:textSize="14sp" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="100dp"
                            android:text="@string/prompt_email"
                            android:padding="3dip"
                            android:textSize="18sp"
                            android:shadowColor="#000000"
                            android:shadowDx="0.5"
                            android:shadowDy="0.0"
                            android:shadowRadius="0.2"/>
                        <TextView
                            android:id="@+id/basic_info_email"
                            android:text="@string/n_a"
                            android:padding="3dip"
                            android:textSize="14sp" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="100dp"
                            android:text="@string/commit"
                            android:padding="3dip"
                            android:textSize="18sp"
                            android:shadowColor="#000000"
                            android:shadowDx="0.5"
                            android:shadowDy="0.0"
                            android:shadowRadius="0.2"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/basic_info_commit"
                            android:text="@string/n_a"
                            android:padding="3dip"
                            android:textSize="14sp"
                            android:ellipsize="end" />
                    </TableRow>
                </TableLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/darker_gray"  />

                <Button
                    android:id="@+id/readme_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/readme"
                    android:textColor="@color/colorAccent"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
